--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,18 +3,16 @@
   ansible.builtin.import_tasks:
     file: cgroups.yml
   tags:
-    - always
     - microk8s
 
 - name: install microk8s
   ansible.builtin.import_tasks:
     file: install.yml
   tags:
-    - always
     - microk8s
 
 - name: configure microk8s Users
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: configure-groups.yml
   when:
     - microk8s_users is defined
@@ -25,7 +23,7 @@
     - notest
 
 - name: configure High Availability
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: configure-HA.yml
   when:
     - microk8s_enable_ha | bool
@@ -34,7 +32,7 @@
     - microk8s.ha
 
 - name: configure plugins
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: configure-plugins.yml
   run_once: true
   when:
