Revised changed_when to avoid warnings during execution Added task to gather facts after SSH connection reset

--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -14,8 +14,7 @@
     - microk8s_plugin.key != "registry"
   register: microk8s_cmd_result
   changed_when:
-    - "'Addon {{ microk8s_plugin.key }} is already enabled'
-      not in microk8s_cmd_result.stdout"
+    - "'is already enabled' not in microk8s_cmd_result.stdout"
   tags:
     - molecule-idempotence-notest
     - microk8s
@@ -32,8 +31,7 @@
     label: "{{ microk8s_plugin.key }}"
   register: microk8s_cmd_result
   changed_when:
-    - "'Addon {{ microk8s_plugin.key }} is already disabled'
-      not in microk8s_cmd_result.stdout"
+    - "'is already disabled' not in microk8s_cmd_result.stdout"
   when:
     - microk8s_is_master | default(false) | bool
     - microk8s_plugins is defined
