--- a/tasks/configure-HA.yml
+++ b/tasks/configure-HA.yml
@@ -45,7 +45,7 @@
   when: inventory_hostname in microk8s_master
   changed_when: false
 
-- name: Get microk8s cluster nodes
+- name: Get microk8s cluster nodes on microk8s host master
   ansible.builtin.command:
     cmd: kubectl get nodes --no-headers -o custom-columns=:.metadata.name
   when: inventory_hostname in microk8s_master
@@ -57,14 +57,12 @@
     cmd: >-
       microk8s add-node |
       grep -E -m1 'microk8s join {{ microk8s_ip_regex_ha }}'
-  with_items: "{{ ansible_play_hosts  | difference(microk8s_master) }}"
-  loop_control:
-    loop_var: microk8s_join_cmd
-  when: inventory_hostname in microk8s_master
+  delegate_to: "{{ microk8s_master }}"
   changed_when: false
   register: microk8s_join_command
 
 - block:
+  
     - name: Waiting for microk8s to be ready on microk8s host node
       ansible.builtin.command:
         cmd: microk8s status --wait-ready
@@ -72,15 +70,24 @@
 
     - name: Set the microk8s join command on the microk8s node
       ansible.builtin.command:
-        cmd: "{{ microk8s_join_cmd.stdout }} --skip-verify"
-      with_items: "{{ hostvars[microk8s_master]['microk8s_join_command'].results }}" # yamllint disable-line
-      loop_control:
-        loop_var: microk8s_join_cmd
-      when: inventory_hostname in microk8s_join_cmd.microk8s_join_cmd and inventory_hostname not in hostvars[microk8s_master]['microk8s_cluster_node'].stdout # yamllint disable-line
-
+        cmd: "{{ microk8s_join_command.stdout }} --skip-verify"
+      
   when: inventory_hostname not in microk8s_master
   tags:
     - microk8s
     - microk8s.ha
     - microk8s.ha.join
+    
+# Set failure domains
+- name: Set failure domains
+  copy:
+    dest: "/var/snap/microk8s/current/args/ha-conf"
+    content: |
+      failure-domain={{ 40 + lookup('ansible.utils.index_of', groups[microk8s_group_ha], 'eq', inventory_hostname) }}
+  notify: restart microk8s
+  tags:
+    - microk8s
+    - microk8s.ha
+    - microk8s.ha.failuredomain
+    
 
