--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   role_name: microk8s
   author: ckaserer
-  namespace: gepaplexx
+  namespace: mircomasa
   description: >-
     Install and configure microk8s - the smallest,
     simplest, pure production K8s on debian based systems.
@@ -12,6 +12,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - focal
+        - noble
   galaxy_tags:
     - container
     - development
