Minor change to make sure .kube/config file is created

--- a/tasks/configure-groups.yml
+++ b/tasks/configure-groups.yml
@@ -35,11 +35,9 @@
 - name: create kubectl config
   ansible.builtin.shell:
     cmd: microk8s config > {{ microk8s_user.home }}/.kube/config
-  args:
-    creates: "{{ microk8s_user.home }}/.kube/config"
   environment:
     PATH: '${PATH}:/snap/bin/'
-  with_items: '{{ microk8s_add_user_to_group.results }}'
+  loop: '{{ microk8s_add_user_to_group.results }}'
   loop_control:
     loop_var: microk8s_user
     label: '{{ microk8s_user.name }}'
