--- a/tasks/configure-groups.yml
+++ b/tasks/configure-groups.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: add user to group
   ansible.builtin.user:
     name: "{{ microk8s_user }}"
@@ -13,7 +14,7 @@
     - microk8s
     - microk8s.user
     - microk8s.user.group
-  become: yes
+  become: true
 
 - name: Create .kube folder for the user
   ansible.builtin.file:
@@ -30,13 +31,11 @@
     - microk8s
     - microk8s.kube
     - microk8s.kube.dir
-  become: yes
+  become: true
 
 - name: create kubectl config
   ansible.builtin.shell:
-    cmd: microk8s config > {{ microk8s_user.home }}/.kube/config
-  environment:
-    PATH: '${PATH}:/snap/bin/'
+    cmd: /snap/bin/microk8s config > {{ microk8s_user.home }}/.kube/config
   loop: '{{ microk8s_add_user_to_group.results }}'
   loop_control:
     loop_var: microk8s_user
@@ -46,7 +45,7 @@
     - microk8s
     - microk8s.kube
     - microk8s.kube.config
-  become: yes
+  become: true
 
 - name: reaffirm permission on config directory
   ansible.builtin.file:
@@ -63,7 +62,7 @@
     - microk8s
     - microk8s.kube
     - microk8s.kube.permission
-  become: yes
+  become: true
 
 - name: reaffirm permission on config file
   ansible.builtin.file:
@@ -80,5 +79,5 @@
     - microk8s
     - microk8s.kube
     - microk8s.kube.permission
-  become: yes
-...
+  become: true
+
