--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Enable crgroups
   ansible.builtin.import_tasks:
     file: cgroups.yml
@@ -46,4 +47,12 @@
   tags:
     - microk8s
     - microk8s.plugins
-...
+
+- name: configure Certificates
+  ansible.builtin.import_tasks:
+    file: configure-certs.yml
+  tags:
+    - microk8s
+    - microk8s.certs
+    - microk8s.certs.info
+
